--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -11,5 +11,12 @@
     <p><a href="mailto:ashahin762@gmail.com">Email- ashahin762@gmail.com</a></p>
     <p>Website: <a href="uchihashahin.com">uchihashahin.com</a></p>
     <p>Phone Number: 01959026543</p>
+
+    <h1>Form</h1>
+    <form action="">
+        <label for="">Your Name:</label>
+        <input type="text">
+        <input type="Submit" name="" id="">
+    </form>
 </body>
 </html>
