--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -12,11 +12,19 @@
     <p>Website: <a href="uchihashahin.com">uchihashahin.com</a></p>
     <p>Phone Number: 01959026543</p>
 
-    <h1>Form</h1>
-    <form action="">
+    <h1>Contact Me</h1>
+    <form action="mailto:ashahin762@gmail.com">
         <label for="">Your Name:</label>
         <input type="text">
-        <input type="Submit" name="" id="">
+        <br>
+        <label for="">Your Email:</label>
+        <input type="email">
+        <br>
+        <label for="">Your Message:</label><br>
+        <textarea name="" id="" cols="30" rows="5"></textarea>
+        
+        <br><input type="Submit" name="" id="">
+
     </form>
 </body>
 </html>
