--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -3,8 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>Shahin's Personal Site</title>
+    <style>
+      body{
+        background-color:#E3FDFD;
+      }
+
+      hr{
+        background-color: #E3FDFD;
+        border-style: none;
+        border-top-style: dotted;
+        border-color: gray;
+        border-width: 5px;
+        width: 5%;
+      }
+    </style>
   </head>
   <body>
+    <!-- Internal CSS
+    <body style="background-color: #E3FDFD;">
+    -->
+
     <table cellspacing="20">
       <tr>
         <td><img src="https://cdn.dribbble.com/users/7392703/avatars/normal/56069e106a15d8e2ed38147a1c977f40.jpeg?1616605042" alt="Shahin Alam"></td>
@@ -19,7 +37,7 @@
           </p></td>
       </tr>
     </table>
-    <hr size="2px" noshade>
+    <hr noshade>
 
     <h3><a href="table.html">Education</a></h3>
     <p><h5><em>---------click this link for more details</em> </h5></p>
@@ -37,7 +55,7 @@
       </ul>
     </ul>
 
-    <hr size="2px" noshade>
+    <hr noshade>
 
     <h3>My Hobbies</h3>
     <ol>
@@ -46,11 +64,11 @@
       <li>Learning New Things</li>
     </ol>
     
-    <hr size="2px" noshade>
+    <hr noshade>
 
     <h3><a href="contact.html">Contact Me</a></h3>
 
-    <hr size="2px" noshade>
+    <hr noshade>
 
     <h3>Skills</h3>
     <!-- <table border="1">
